# SR-2-Flat-Shading

./: CMakeLists.txt  GraphicsStructures.h  ObjLoader.h  README.md  ShaderUtilities.h  main.cpp
